<resources>
    <string name="app_name">CloudyCar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_summary">SummaryActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="request_create_header">Request A Ride</string>
    <string name="ride_details">Ride Details</string>
    <string name="your_estimated_fare_is">Your estimated fare is:</string>
    <string name="request_description_header">Description:</string>
    <string name="submit">SUBMIT</string>
    <string name="rider_summary_header">Be a Rider</string>
    <string name="title_activity_route_selector">Map</string>

    <string name="sign_up_duplicate_user_message">The username is already taken</string>
    <string name="sign_up_malformed_user_message">The user is malformed</string>
    <string name="write_end_location">End: %s</string>
    <string name="write_start_location">Start: %s</string>
    <string name="title_activity_request_details">Request Details</string>
    <string name="title_activity_search">Search Results</string>
    <string name="title_activity_search_params">Search</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="accept_request_button_text">Accept Request</string>
    <string name="confirm_request_button_text">Complete Request</string>
    <string name="accept_request">Accept Request</string>
    <string name="rider_wants_pickup">The rider wants you to pick them up.</string>
    <string name="havent_accepted_ride">You have not accepted this ride</string>
    <string name="waiting_for_confirm">Waiting for the rider to confirm</string>
    <string name="title_activity_location_search">Map</string>

    <string name="search_title">Search a keyword</string>
    <string name="search_submit">SEARCH</string>
    <string name="search_keyword">Keyword</string>
    <string name="search_filter_by">Filter by:</string>
    <string name="search_price">Price</string>
    <string name="search_price_per_km">Price per km</string>
    <string name="search_current_price_selected">Price</string>
    <string name="search_choose_location_button">Choose location</string>
    <string name="search_within_text">within</string>

</resources>
