<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@color/backgroundGrey">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/blueSubtitle"
        android:text="@string/ride_details" />

    <android.support.v7.widget.CardView
        android:id="@+id/routeSummary"
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/write_start_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:id="@+id/display_route_start"
                tools:layout_weight="1"
                style="@style/CardListItem"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/backgroundGrey"></View>

            <TextView
                android:text="@string/write_end_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:id="@+id/display_route_end"
                android:layout_weight="1"
                style="@style/CardListItem"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/routeSummary"
        style="@style/blueSubtitle"
        android:text="@string/your_estimated_fare_is" />

    <TextView
        android:id="@+id/suggested_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        style="@style/requestFareBoldText"
        android:gravity="center_vertical|center_horizontal"
        android:text="3.50" />

    <android.support.v7.widget.CardView
        android:id="@+id/fareCustomizer"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/suggested_price"
        style="@style/CardViewStyle">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/set_price"
            android:gravity="left|center_vertical"
            android:paddingLeft="15dp"
            android:inputType="numberDecimal"
            android:hint="Name your price" />
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/submit_ride_request"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/submit"
        android:theme="@style/Button" />

</RelativeLayout>